# SQLer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README_JA.md  STYLE_GUIDE.md  m6.md  m7.md  m8.md  main.py  pre-m6.md  pyproject.toml  sqler.db  sqler_roadmap.md
.github/workflows/: ci.yml  perf.yml  pypi.yml  release.yml  test.yml  workflow.yml
docs/: EXAMPLES.md
examples/: 02_queries.py  03_relationships.py  04_safe_models.py  05_async_quickstart.py  06_indexes_and_explain.py  async_model_quickstart.py  async_safe_model.py  model_arrays_any.py  sync_model_quickstart.py  sync_safe_model.py
examples/fastapi/: app.py  db.py  errors.py  models.py  schemas.py
src/sqler/: __init__.py  registry.py
src/sqler/adapter/: __init__.py  asynchronous.py  synchronous.py
src/sqler/db/: __init__.py  abstract.py  async_db.py  sqler_db.py  synchronous.py
src/sqler/models/: __init__.py  async_model.py  async_queryset.py  async_safe.py  model.py  model_field.py  (+3 more)
tests/async/: conftest.py  test_async_adapter_wal.py  test_async_basic.py  test_async_batch_hydration.py  test_async_models.py  test_async_relationships.py  test_async_safe_models.py
tests/perf/: conftest.py  test_bulk_insert.py  test_concurrent_writes.py  test_json_each_queries.py
tests/sync/: conftest.py  test_batch_hydration.py  test_db.py  test_delete_integrity.py  test_expression.py  test_fields.py  test_models.py  test_models_complex.py  test_query_building.py  test_query_complex.py  test_query_debug_explain.py  test_query_dicts.py  test_relationship_joins.py  test_relationships.py  test_safe_model.py
(+8 files in other folders)
